--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Android_Media_30_Alunos</string>
+    <string name="app_name">Media de 30 Alunos</string>
 </resources>
